syntax = "proto3";

package proto;
option go_package = "pb";


message NhanVien {
  uint32 dm_nhan_vien_id = 1;
  string ma_nhan_vien = 2;
  string ten_nhan_vien = 3;
  string full_name = 4;
  string last_name = 5;
  uint32 phong_id = 6;
  uint32 dm_chuc_danh_id = 7;
  uint32 dm_chuc_vu_id = 8;
  string so_dien_thoai = 9;
}


message ThamSoHeThong {
  int64 Id = 1;
  string MaThamSo = 2;
  string TenThamSo = 3;
  string GiaTri = 4;
  string DienGiai = 5;
}


message ReadRequest {
  int64 id = 1;
}

message PhongBanNhanVienRequest {
  int64 id = 1;
  int64 PhongBanId = 2;
}

message ThamSoHeThongRequest {
  int64 id = 1;
  string code = 2;
}

message GetTokenRequest {
  int64 id = 1;
  int32 nhanVienId = 2;
}

message GetTokenResponse {
  int64 id = 1;
  string token = 2;
}


message DanhSachNhanVienResponse {
  repeated NhanVien nhanVien = 1;
}

message ThamSoHeThongsResponse {
  repeated ThamSoHeThong thamso = 1;
}

message ThamSoHeThongResponse {
  ThamSoHeThong thamso = 1;
}

message NhanVienResponse {
  NhanVien nhanVien = 1;
}

message PingResponse {
  string message = 1;
}


service UserService {
  rpc GetDanhSachNhanVien (ReadRequest) returns (DanhSachNhanVienResponse);
  rpc GetToken (GetTokenRequest) returns (GetTokenResponse);
  rpc GetNhanVienById (ReadRequest) returns (NhanVienResponse);
  rpc GetPhongBanNhanVien (PhongBanNhanVienRequest) returns (DanhSachNhanVienResponse);
  rpc GetThamSosByCode (ThamSoHeThongRequest) returns (ThamSoHeThongsResponse);
  rpc GetThamSoByCode (ThamSoHeThongRequest) returns (ThamSoHeThongResponse);
  rpc Ping (ReadRequest) returns (PingResponse);
}